samples/_failures_safe/1761298840_0f876e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce0da859.c: In function ‘main’:
./samples/SAFE/__tmp_ce0da859.c:168:5: error: expected declaration or statement at end of input
  168 |     while (running) {
      |     ^~~~~
./samples/SAFE/__tmp_ce0da859.c:168:5: error: expected declaration or statement at end of input
